--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
 
 # dependencies
 /node_modules
@@ -13,10 +18,12 @@
 
 # misc
 .DS_Store
-.env.local
+.env
 .env.development.local
 .env.test.local
 .env.production.local
+.env.local
+
 
 npm-debug.log*
 yarn-debug.log*
