--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^18.0.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
+    "redux-persist": "^6.0.0",
     "sass": "^1.51.0",
     "web-vitals": "^2.1.4"
   },
